# explorium-cli

./: .env.example  .gitignore  CLAUDE.md  CLI_DOCUMENTATION.md  JIRA-cli-documentation-improvements.md  Project-Architecture.md  README.md  SKILL.md  add-422-to-retryable-status-codes.md  build-linux.sh  build.sh  commands-reference.md  install.sh  pyproject.toml  requirements.txt  setup-cowork.sh  test_companies.csv  vibe-prospecting-multistep-workflow-1.3.8.skill  vibe-prospecting-multistep-workflow-1.4.3.skill  vibe-prospecting-multistep-workflow-1.4.5.skill  vibe-prospecting-multistep-workflow-1.4.6.skill  vibe-prospecting-multistep-workflow-1.4.7.skill  vibe-prospecting-multistep-workflow-1.4.8.skill  vibe-prospecting-multistep-workflow-1.4.9.skill  vibe-prospecting-multistep-workflow-1.5.0.skill
docs/: cli-value-add-report.md
explorium_cli/: __init__.py  ai_client.py  batching.py  concurrency.py  config.py  constants.py  formatters.py  main.py  match_utils.py  pagination.py  parallel_search.py  research.py  utils.py  validation.py
skills/: SKILL.md
tests/: __init__.py  conftest.py  test_api_businesses.py  test_api_prospects.py  test_api_webhooks.py  test_batching.py  test_cli_integration.py  test_client.py  test_concurrency.py  test_config.py  test_documentation_examples.py  test_filter_validation.py  test_formatters.py  test_match_utils.py  test_null_prospect_handling.py  test_pagination.py  test_parallel_search.py  test_plan_businesses.py  test_research.py  test_research_errors.py  test_search_filters.py
tickets/: PRD-1_Null-Prospect-ID-Handling.md  (+4 more)
(+14 files in other folders)
